Fix navigation overlap

--- a/_sass/documentation.sass
+++ b/_sass/documentation.sass
@@ -12,7 +12,7 @@ img.outwatch-home-logo
     top: $normal-space
     height: 100%
     overflow: hidden
-    font-size: 2.6vh
+    font-size: 2.5vh
     a
         +anchor_style($black)
     nav ul
@@ -77,7 +77,3 @@ article
             padding-top: 0.5em
     article
         margin-left: 0
-
-@media only screen and (min-height: 800px)
-    .side-menu
-        font-size: 24px
